build issue fixes