@@ -12,16 +12,30 @@ dependencies {
   implementation (deps.'graph-vis')
   implementation project(path: ':coral-hive')
   implementation(project(path: ':shading:guava-shaded', configuration: 'shadow'))
-  testImplementation (deps.'hive'.'hive-exec-core') {
+  testImplementation ('org.apache.hive:hive-exec:2.3.9:core') {
     exclude group: 'org.apache.avro', module: 'avro-tools'
     // This exclusion is required to prevent duplicate classes since we include
     // shaded 'calcite-core' transitively
     exclude group: 'org.apache.calcite', module: 'calcite-core'
+  }
+  testImplementation('org.apache.hive:hive-metastore:2.3.9') {
+    exclude group: 'org.apache.calcite', module: 'calcite-core'
+    exclude group: 'org.apache.calcite', module: 'calcite-avatica'
   }
   testImplementation deps.'hadoop'.'hadoop-mapreduce-client-core'
   testImplementation deps.'kryo'
   testImplementation 'com.google.code.gson:gson:2.10.1'
   testImplementation 'org.apache.hadoop:hadoop-common:2.7.0'
   implementation 'com.linkedin.calcite:calcite-core:1.21.0.265'
-  implementation 'org.apache.calcite:calcite-linq4j:1.21.0'
+  implementation 'com.linkedin.calcite:calcite-linq4j:1.21.0.265'
+  testImplementation 'org.apache.derby:derby:10.10.2.0'
+
+  // DataNucleus dependencies required by Hive Metastore under JDK 17
+  testRuntimeOnly 'org.datanucleus:datanucleus-api-jdo:4.2.5'
+  testRuntimeOnly 'org.datanucleus:datanucleus-core:4.1.17'
+  testRuntimeOnly 'org.datanucleus:datanucleus-rdbms:4.1.19'
+}
+
+test {
+  jvmArgs '--add-opens=java.sql/java.sql.Driver=ALL-UNNAMED', '--add-exports=java.sql/java.sql.Driver=ALL-UNNAMED'
 }
